Added Zoom, Pan+Drag

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				 	<li><a href="https://www.d3-graph-gallery.com/graph/dendrogram_basic.html"> Most basic dendrogram in d3.js</a></li>
       				<li><a href="https://bl.ocks.org/mbostock/4339607"> Radial Cluster Dendrogram by Mike Bostock</a></li>
 					<li><a href="https://bl.ocks.org/anonymous/bb5be85d509eb7824e95d193c4fb6d27/e87fb16f8058f85719647dde561bff12f998361a"> Radial Tidy Tree by Gerardo Furtado</a></li>
+					<li><a href="https://stackoverflow.com/questions/39688256/force-layout-zoom-resets-on-first-tick-of-dragging-or-zomming"> Initializing Zoom, Pan+Drag</a></li>
 			 	</ul>
 		  	<p>Data Resources: </p>
 			 	<ul style = line-height:19px>
@@ -62,6 +63,8 @@
       <li><a href="https://www.d3-graph-gallery.com/graph/dendrogram_basic.html"> Most basic dendrogram in d3.js</a></li>
       <li><a href="https://bl.ocks.org/mbostock/4339607"> Radial Cluster Dendrogram by Mike Bostock</a></li>
 	  <li><a href="https://bl.ocks.org/git-ashish/3aa81521f96e48198c80b4e2742bb6bc"> Tree of Life by Ashish Singh</a></li>
+	  <li><a href="https://bl.ocks.org/anonymous/bb5be85d509eb7824e95d193c4fb6d27/e87fb16f8058f85719647dde561bff12f998361a"> Radial Tidy Tree by Gerardo Furtado</a></li>
+	  <li><a href="https://stackoverflow.com/questions/39688256/force-layout-zoom-resets-on-first-tick-of-dragging-or-zomming"> Initializing Zoom, Pan+Drag</a></li>
     </ul>-->
 	<!--<h4> Data Resources: </h4>-->
     <!--<ul>
