added github link

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 					<a href="https://www.vegetables.co.nz/vegetables-a-z/9"> Vegetables A-Z</a>
 				</p>
 			</div>
-
+			<div style = "text-align:center; font-size:20px">
+				<a href="https://mangoship.github.io/CSE163-Enhancement/"> Github Link</a>
+			</div>
 		</div>
   </body>
-    
 </html>
