fixed github link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</p>
 			</div>
 			<div style = "text-align:center; font-size:20px">
-				<a href="https://mangoship.github.io/CSE163-Enhancement/"> Github Link</a>
+				<a href="https://github.com/MangoShip/CSE163-Enhancement/"> Github Link</a>
 			</div>
 		</div>
   </body>
