--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
 	    	<div class = "title"><span id="name">Test</span></div>
 			<div class = "type">Type:<span id="type">Test</span></div>
 		</div>
+		<div id="tooltip2" class="hidden"></div>
+		<div id="tooltip3" class="hidden">
+			<div class = "nutrition">Nutrition Facts</div>
+			<div class = "size">
+				Serving size <span id = "size">test</span>
+			</div>
+			<div class = "calories">
+				Calories <span class = "normal" id = "calories">200</span>
+			</div>
+			<div class = "fat">
+				Total Fat<span class = "normal" id = "fat"> 8g</span>
+			</div>
+			<div class = "cholesterol">
+				Cholesterol<span class = "normal" id = "cholesterol"> 0mg</span>
+			</div>
+			<div class = "sodium">
+				Sodium<span class = "normal" id = "sodium"> 160mg</span>
+			</div>
+			<div class = "carbohydrates">
+				Total Carbohydrates<span class = "normal" id = "carbohydrates"> 10g</span>
+			</div>
+			<div class = "protein">
+				Protein<span class = "normal" id = "protein"> 3g</span>
+			</div>
+		</div>
+		<div id="line" class="hidden"></div>
+		<div id="line2" class="hidden"></div>
 		<script type="text/javascript" src="enhancement.js"></script> 
 		<div1 style = "color:black; background-color:#f5f6f7">
 			<div1>
@@ -59,7 +86,8 @@
 					<a href="https://www.myrecipes.com/ingredients/types-of-beans"> 13 Common Types of Beans and How to Use Them</a><br>
 					<a href="https://www.halfyourplate.ca/fruits-and-veggies/fruits-a-z/"> Fruits From A-Z</a><br>
 					<a href="https://www.thespruceeats.com/types-of-clams-4067419"> Types of Clams</a><br>
-					<a href="https://www.vegetables.co.nz/vegetables-a-z/9"> Vegetables A-Z</a>
+					<a href="https://www.vegetables.co.nz/vegetables-a-z/9"> Vegetables A-Z</a><br>
+					<a href="https://fdc.nal.usda.gov/"> U.S. Department of Agriculture</a>
 				</p>
 			</div>
 			<div style = "text-align:center; font-size:20px">
