Final files submitted

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<p class = "head">Files Submitted:<br></p>
 				<p style = "font-size: 20px">
 					<strong>index.html, stylesheet.css, enhancement.js, 
-					radial_food.data.csv, images(folder)</strong>
+					radial_food.data.csv, images(folder), Effort Document.pdf, Enhancement Presentation.pdf</strong>
 				</p>
 			</div>
 			<div class = "column" style = "text-align: center">
